# communique

./: .gitignore  7e5c009b  README.md  com.github.suzie97.communique.yml  meson.build  meson_options.txt  subtree_pull.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
build-aux/flatpak/: com.github.suzie97.communique.yml  org.gnome.FeedReader.yml
data/: com.github.suzie97.communique-autostart.desktop.in  com.github.suzie97.communique.appdata.xml.in  com.github.suzie97.communique.desktop.in  com.github.suzie97.communique.gresource.xml  meson.build  org.gnome.FeedReader-autostart.desktop.in  org.gnome.FeedReader.appdata.xml.in  org.gnome.FeedReader.desktop.in
data/ArticleView/: article.html  style.css
data/gtk-css/: basics.css
data/tt-rss-feedreader-plugin/: README.md
data/tt-rss-feedreader-plugin/api_feedreader/: init.php
docs/: _config.yml
docs/_posts/: 2021-09-26-welcome-to-jekyll.markdown
libraries/WebExtension/: webextension.vala
plugins/backend/: meson.build
plugins/backend/bazqux/: bazqux.gresource.xml  bazqux.plugin  bazquxConnection.vala  bazquxInterface.vala  bazquxUtils.vala  com.github.suzie97.communique.bazqux.gschema.xml  meson.build
plugins/backend/decsync/: decsyncInterface.vala  decsyncListeners.vala  decsyncUtils.vala  meson.build
plugins/backend/demo/: com.github.suzie97.communique.demo.gschema.xml  demo.gresource.xml  demo.plugin  meson.build
plugins/backend/feedbin/: feedbin.gresource.xml  feedbin.plugin  feedbinAPI.vala  feedbinInterface.vala  feedbinUtils.vala  meson.build  org.gnome.feedreader.feedbin.gschema.xml
plugins/backend/feedhq/: feedhq.gresource.xml  feedhq.plugin  feedhqConnection.vala  feedhqInterface.vala  feedhqUtils.vala  meson.build  org.gnome.feedreader.feedhq.gschema.xml
plugins/backend/fresh/: com.github.suzie97.communique.fresh.gschema.xml  fresh.gresource.xml  fresh.plugin  freshConnection.vala  freshInterface.vala  freshUtils.vala  meson.build
plugins/backend/inoreader/: InoReaderAPI.vala  InoReaderConnection.vala  InoReaderUtils.vala  inoreader.gresource.xml  inoreader.plugin  meson.build  org.gnome.feedreader.inoreader.gschema.xml
plugins/backend/local/: SuggestedFeedRow.vala  local.gresource.xml  local.plugin  localInterface.vala  localUtils.vala  meson.build  recommendedFeeds.json
plugins/backend/owncloud/: OwncloudNewsAPI.vala  OwncloudNewsInterface.vala  OwncloudNewsMessage.vala  OwncloudNewsUtils.vala  (+4 more)
plugins/backend/ttrss/: com.github.suzie97.communique.ttrss.gschema.xml  meson.build  ttrss.gresource.xml  ttrss.plugin  ttrssAPI.vala  ttrssInterface.vala  ttrssMessage.vala  ttrssUtils.vala
plugins/share/: meson.build
po/: POTFILES  com.github.suzie97.communique.pot  feedreader.pot
schemas/: com.github.suzie97.communique.gschema.xml  com.github.suzie97.communique.saved-state.gschema.xml  com.github.suzie97.communique.tweaks.gschema.xml  meson.build  org.gnome.feedreader.gschema.xml  org.gnome.feedreader.keybindings.gschema.xml  org.gnome.feedreader.saved-state.gschema.xml  org.gnome.feedreader.share.gschema.xml  org.gnome.feedreader.tweaks.gschema.xml
src/: Constants.vala.in  DataBaseReadOnly.vala  DataBaseWriteAccess.vala  FavIcon.vala  FeedReader.vala  FeedReaderMain.vala  Logger.vala  Notification.vala  Settings.vala  Utils.vala
src/Backend/: Backend.vala  FeedServer.vala
src/ContentGrabber/: grabber.vala  grabberUtils.vala
src/Share/: ServiceSetup.vala  share.vala
src/Widgets/: AddFeedDialog.vala  AddFolderDialog.vala  AddPopover.vala  ArticleRow.vala  ArticleView.vala  ArticleViewHeader.vala  ArticleViewUrlOverlay.vala  CategorieRow.vala  ColorCircle.vala  ColorPopover.vala  ColumnView.vala  ColumnView.vala~  ColumnViewHeader.vala  ColumnViewHeader.vala~  FeedList.vala  FeedListFooter.vala  FeedListFooter.vala~  FeedRow.vala  FullscreenHeader.vala  HeaderBar.vala  HoverButton.vala  ImportOPMLDialog.vala  InAppNotification.vala  LoginPage.vala  LoginRow.vala  MainWindow.vala  MediaRow.vala  ModeButton.vala  RemovePopover.vala  ResetPage.vala  ServiceInfo.vala  ServiceSettingsPopover.vala  Setting.vala  SettingsDialog.vala  SharePopover.vala  ShareRow.vala  Shortcuts.vala  SimpleHeader.vala  SimpleHeader.vala~  SpringCleanPage.vala  (+4 more)
(+29 files in other folders)
