option('share-plugins',
        type: 'array',
        choices : ['browser', 'email', 'instapaper', 'pocket', 'wallabag'],
        value : ['browser', 'email', 'instapaper', 'pocket', 'wallabag'],
        description: 'List of share plugins to install'
)
option('backend-plugins',
        type: 'array',
        choices: ['bazqux', 'feedbin', 'feedhq', 'fresh', 'inoreader', 'local', 'owncloud', 'ttrss'],
        value : ['bazqux', 'feedbin', 'feedhq', 'fresh', 'inoreader', 'local', 'owncloud', 'ttrss'],
        description: 'List of backend plugins to install'
)
