install_data([
    'com.github.suzie97.communique.gschema.xml',
    'com.github.suzie97.communique.keybindings.gschema.xml',
    'com.github.suzie97.communique.saved-state.gschema.xml',
    'com.github.suzie97.communique.share.gschema.xml',
    'com.github.suzie97.communique.tweaks.gschema.xml'
  ],
  install_dir: join_paths(SHARE_DIR, 'glib-2.0/schemas')
)
